--- a/2025aa05527_ml_assignment_2.ipynb
+++ b/2025aa05527_ml_assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ddf3a4c",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,7 @@
     "from sklearn.datasets import load_breast_cancer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
     "from sklearn.metrics import (accuracy_score, precision_score, recall_score, \n",
     "                             f1_score, roc_auc_score, matthews_corrcoef, confusion_matrix)\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a134c856",
    "metadata": {},
    "outputs": [],
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "cfced450",
    "metadata": {},
    "outputs": [
@@ -57,7 +58,11 @@
       "       'worst smoothness', 'worst compactness', 'worst concavity',\n",
       "       'worst concave points', 'worst symmetry', 'worst fractal dimension',\n",
       "       'target'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "target\n",
+      "1    357\n",
+      "0    212\n",
+      "Name: count, dtype: int64\n"
      ]
     },
     {
@@ -96,23 +101,34 @@
     "print(df.columns)\n",
     "X = df.drop(columns='target')\n",
     "y = df['target']\n",
-    "\n",
+    "print(y.value_counts())\n",
     "plot_correlation_matrix(X)\n",
+    "\n",
+    "df.to_csv(\"breast_cancer_wisconsin/data.csv\", index=False) # save the test data for later use in the app.py file\n",
+    "\n",
+    "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "transformed = imputer.fit_transform(X=X)\n",
+    "X = pd.DataFrame(transformed, columns=X.columns)\n",
+    "joblib.dump(imputer, \"model/imputer.pkl\") # save the imputer for later use in the app.py file\n",
     "\n",
     "# scale the features\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
+    "X_scaled = pd.DataFrame(X_scaled, columns=X.columns)\n",
+    "joblib.dump(scaler, \"model/scaler.pkl\") # save the scaler for later use in the app.py file\n",
     "\n",
     "# split the data into train and test set \n",
     "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, train_size=0.8, random_state=42)\n",
     "training_size = X_train.shape[0]\n",
     "test_size = X_test.shape[0]\n",
+    "\n",
+    "\n",
     "print(f\"Training size: {training_size}, Test size: {test_size}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f950c9ec",
    "metadata": {},
    "outputs": [],
@@ -148,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cbb58367",
    "metadata": {},
    "outputs": [
@@ -177,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "14e9751b",
    "metadata": {},
    "outputs": [
@@ -187,7 +203,7 @@
        "['model/lr_model.pkl']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4c63eb39",
    "metadata": {},
    "outputs": [
@@ -234,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5901f88f",
    "metadata": {},
    "outputs": [
@@ -277,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9522d1c7",
    "metadata": {},
    "outputs": [
@@ -287,7 +303,7 @@
        "['model/nb_model.pkl']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "36908c59",
    "metadata": {},
    "outputs": [
@@ -343,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3ecc70ae",
    "metadata": {},
    "outputs": [
@@ -353,7 +369,7 @@
        "['model/dcf_model.pkl']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "379eb038",
    "metadata": {},
    "outputs": [
@@ -408,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "bf626528",
    "metadata": {},
    "outputs": [
@@ -418,7 +434,7 @@
        "['model/knn_model.pkl']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "c3a0c01c",
    "metadata": {},
    "outputs": [
@@ -477,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c7f4bf66",
    "metadata": {},
    "outputs": [
@@ -487,7 +503,7 @@
        "['model/rfc_model.pkl']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,10 +515,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "40b6eadf",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dvipin2/dev/miniconda3/envs/bits/lib/python3.12/site-packages/xgboost/training.py:200: UserWarning: [08:20:05] WARNING: /__w/xgboost/xgboost/src/learner.cc:782: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -513,16 +539,6 @@
       "F1 Score: 0.9650\n",
       "ROC AUC Score: 0.9928\n",
       "Matthews Correlation Coefficient: 0.9064\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dvipin2/dev/miniconda3/envs/py312/lib/python3.12/site-packages/xgboost/training.py:200: UserWarning: [06:54:17] WARNING: /__w/xgboost/xgboost/src/learner.cc:782: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
      ]
     },
     {
@@ -562,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "7000ed52",
    "metadata": {},
    "outputs": [
@@ -572,7 +588,7 @@
        "['model/xgb_model.pkl']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
